--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,11 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
+[*.{cpp,c,h}]
+indent_size = 4
+end_of_line = lf
+insert_final_newline = true
+
 # XML files
 [*.{xml,xaml}]
 indent_size = 2
