--- a/Source/Directory.Build.props
+++ b/Source/Directory.Build.props
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
-  <Import Condition="'$(MSBuildProjectExtension)' != '.vcxproj'" Project="Build\Settings.props" />
-  <Import Condition="'$(MSBuildProjectExtension)' == '.vcxproj'" Project="Build\Settings.Native.props" />
+  <Import Project="..\Eng\Build.props" />
 </Project>
