--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -8,10 +8,10 @@
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/gix/PresentationTheme.Aero</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <releaseNotes>https://github.com/gix/PresentationTheme.Aero/blob/$RepositoryCommit$/CHANGELOG.md</releaseNotes>
+    <releaseNotes>https://github.com/gix/PresentationTheme.Aero/blob/$SourceRevisionId$/CHANGELOG.md</releaseNotes>
     <description>A highly polished Windows Aero theme for WPF supporting the Aero, AeroLite and High Contrast system themes of Windows 8 and Windows 10.</description>
     <tags>wpf theme aero</tags>
-    <repository type="git" url="https://github.com/gix/PresentationTheme.Aero" commit="$RepositoryCommit$"/>
+    <repository type="git" url="https://github.com/gix/PresentationTheme.Aero" commit="$SourceRevisionId$"/>
     <references>
       <group targetFramework="net45">
         <reference file="PresentationTheme.Aero.dll"/>
@@ -27,54 +27,54 @@
     </frameworkReferences>
   </metadata>
   <files>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.AeroLite.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.dll" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.pdb" target="lib\net45"/>
-    <file src="..\build\any\bin\net45\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.dll" target="lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.pdb" target="lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.xml" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\net45\PresentationTheme.Aero.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\net45\PresentationTheme.Aero.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\net45\PresentationTheme.Aero.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win8\net45\PresentationTheme.Aero.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win8\net45\PresentationTheme.Aero.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win8\net45\PresentationTheme.Aero.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8\net45\PresentationTheme.AeroLite.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8\net45\PresentationTheme.AeroLite.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8\net45\PresentationTheme.AeroLite.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8\net45\PresentationTheme.HighContrast.Win8.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8\net45\PresentationTheme.HighContrast.Win8.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8\net45\PresentationTheme.HighContrast.Win8.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win10\net45\PresentationTheme.Aero.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win10\net45\PresentationTheme.Aero.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win10\net45\PresentationTheme.Aero.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10\net45\PresentationTheme.AeroLite.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10\net45\PresentationTheme.AeroLite.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10\net45\PresentationTheme.AeroLite.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10\net45\PresentationTheme.HighContrast.Win10.dll" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10\net45\PresentationTheme.HighContrast.Win10.pdb" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10\net45\PresentationTheme.HighContrast.Win10.xml" target="lib\net45"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\netcoreapp3.0\PresentationTheme.Aero.dll" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\netcoreapp3.0\PresentationTheme.Aero.pdb" target="lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\netcoreapp3.0\PresentationTheme.Aero.xml" target="lib\netcoreapp3.0"/>
     <!-- When present, a matching runtimes folder is used *instead* of the normal
          lib directory. Since PresentationTheme.Aero.dll is a dependency of all
          theme assemblies, it must be duplicated here. The entry in the lib
          folder must be present though for package references to work. -->
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win8.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win8.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win8.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.Aero.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.AeroLite.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
-    <file src="..\build\any\bin\netcoreapp3.0\PresentationTheme.HighContrast.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\netcoreapp3.0\PresentationTheme.Aero.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\netcoreapp3.0\PresentationTheme.Aero.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero\netcoreapp3.0\PresentationTheme.Aero.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win8\netcoreapp3.0\PresentationTheme.Aero.Win8.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win8\netcoreapp3.0\PresentationTheme.Aero.Win8.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win8\netcoreapp3.0\PresentationTheme.Aero.Win8.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8\netcoreapp3.0\PresentationTheme.AeroLite.Win8.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8\netcoreapp3.0\PresentationTheme.AeroLite.Win8.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win8\netcoreapp3.0\PresentationTheme.AeroLite.Win8.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8\netcoreapp3.0\PresentationTheme.HighContrast.Win8.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8\netcoreapp3.0\PresentationTheme.HighContrast.Win8.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win8\netcoreapp3.0\PresentationTheme.HighContrast.Win8.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win10\netcoreapp3.0\PresentationTheme.Aero.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win10\netcoreapp3.0\PresentationTheme.Aero.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.Aero.Win10\netcoreapp3.0\PresentationTheme.Aero.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10\netcoreapp3.0\PresentationTheme.AeroLite.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10\netcoreapp3.0\PresentationTheme.AeroLite.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.AeroLite.Win10\netcoreapp3.0\PresentationTheme.AeroLite.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10\netcoreapp3.0\PresentationTheme.HighContrast.Win10.dll" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10\netcoreapp3.0\PresentationTheme.HighContrast.Win10.pdb" target="runtimes\win\lib\netcoreapp3.0"/>
+    <file src="..\build\any\bin\PresentationTheme.HighContrast.Win10\netcoreapp3.0\PresentationTheme.HighContrast.Win10.xml" target="runtimes\win\lib\netcoreapp3.0"/>
   </files>
 </package>
