Re-add targets file to copy themes to output directory for .NET FX projects

--- a/Source/PresentationTheme.Aero.nuspec
+++ b/Source/PresentationTheme.Aero.nuspec
@@ -27,6 +27,7 @@
     </frameworkReferences>
   </metadata>
   <files>
+    <file src="PresentationTheme.Aero.targets" target="build\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero\net45\PresentationTheme.Aero.dll" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero\net45\PresentationTheme.Aero.pdb" target="lib\net45"/>
     <file src="..\build\any\bin\PresentationTheme.Aero\net45\PresentationTheme.Aero.xml" target="lib\net45"/>
