Remove UTF-8 BOM from generated version resources
The resource compiler barfs on those.

--- a/Eng/Common/CreateVersionResource.targets
+++ b/Eng/Common/CreateVersionResource.targets
@@ -115,7 +115,8 @@
     buffer.AppendLine("    END");
     buffer.AppendLine("END");
 
-    File.WriteAllText(OutputFile.GetMetadata("FullPath"), buffer.ToString(), Encoding.UTF8);
+    var encoding = new UTF8Encoding(false);
+    File.WriteAllText(OutputFile.GetMetadata("FullPath"), buffer.ToString());
 ]]>
       </Code>
     </Task>
